--- a/src/app/features/profile/profile.html
+++ b/src/app/features/profile/profile.html
@@ -19,6 +19,12 @@
         (click)="setActiveSection('account')">
         ▸ PANEL DE CONTROL
       </button>
+
+      <button
+        class="sidebar-item"
+        (click)="logOut()">
+        ▸ CERRAR SESIÓN
+      </button>
     </aside>
 
     <!-- Main Content -->
