--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,6 +3,7 @@
 
   <main class="app-content">
     <router-outlet></router-outlet>
+    <app-floating-chat></app-floating-chat>
   </main>
 
   <app-app-footer></app-app-footer>
