add:checkbox rememberme

--- a/src/app/features/auth/login/login.html
+++ b/src/app/features/auth/login/login.html
@@ -41,10 +41,9 @@
         </button>
 
         <div class="remember-section">
-          <label class="checkbox-label">
-            <input type="checkbox" />
-            <span>Recuérdame</span>
-          </label>
+          <mat-checkbox formControlName="rememberMe" color="primary">
+            Recuérdame
+          </mat-checkbox>
         </div>
 
       </form>
