fix: about text and instagram social media

--- a/src/app/features/about/about.html
+++ b/src/app/features/about/about.html
@@ -4,33 +4,29 @@
   </div>
 
   <div class="about-content-column">
-    <h1>Aserrín</h1>
-    <h2>¡Aprende jugando!</h2>
+    <h1>Little Hands</h1>
 
     <p>
-      Somos una empresa enfocada en brindar herramientas para que los padres puedan educar a sus hijos desde edad
-      temprana a través de juguetes y mobiliario infantil alineados a los métodos educativos de Maria Montessori,
-      Emmi Pikler, la pedagogía Waldorf y Reggio Emilia. Con ello promovemos el juego activo, libre y creativo,
-      especialmente en el desarrollo motor grueso y fino de tu peque.
+      En Little Hands, creemos que cada niño tiene un potencial único, capaz de desarrollarse plenamente cuando se
+      le brinda un entorno preparado, respetuoso y lleno de amor por el aprendizaje.
+      Inspirados en la filosofía Montessori, diseñamos materiales educativos que estimulan la autonomía, la creatividad
+      y la concentración, acompañando el crecimiento natural de cada etapa.
     </p>
     <p>
-      Nuestros productos están adecuados a texturas y tamaño, para permitir que el aprendizaje de tu peque sea de
-      acuerdo a su ritmo, desarrollando su independencia, sus habilidades sensoriales y mediante el uso de juguetes
-      desestructurados aprende, jugando.
+      Nuestro propósito es apoyar a las familias, educadores y personas conscientes que buscan una crianza más libre,
+      sostenible y conectada con los valores humanos.
     </p>
     <p>
-      Cuidamos de cada detalle en nuestro proceso de fabricación, desde el diseño, la elección de los colores y
-      materiales, el cortado y acabado son revisados para darte la seguridad que tu peque necesita.
+      Cada uno de nuestros productos es elaborado con cuidado y dedicación por artesanos locales, quienes transforman
+      la madera en piezas únicas llenas de calidez y significado. De esta forma, no solo promovemos la educación consciente,
+      sino también el desarrollo de comunidades y oficios tradicionales que valoran el trabajo hecho a mano.
     </p>
     <p>
-      Nuestra calidad, seguridad, innovación y estética de nuestros productos nos han posicionado como punto de
-      referencia a nivel de Latinoamérica en el ámbito de mobiliario infantil y juguetería de madera.
+      Unimos pedagogía, diseño y arte para ofrecer materiales duraderos, seguros y estéticamente armoniosos, pensados
+      para nutrir la mente y el corazón de los más pequeños.
     </p>
     <p class="supporting-text">
-      ¡Al comprarnos estás apoyando el trabajo de artesanos peruanos!
-    </p>
-    <p class="supporting-text">
-      Gracias por elegirnos y crecer juntos como familia ✨
+      Porque educar es sembrar amor, respeto y propósito.
     </p>
 
   </div>
