--- a/src/app/shared/components/app-footer/app-footer.html
+++ b/src/app/shared/components/app-footer/app-footer.html
@@ -19,7 +19,7 @@
     <div class="footer-column">
       <h3 class="footer-title">Síguenos</h3>
       <div class="social-links">
-        <a href="https://instagram.com" target="_blank" class="social-icon">
+        <a href="https://www.instagram.com/bylittlehands.pe/" target="_blank" class="social-icon">
           <i class="fab fa-instagram"></i>
         </a>
         <a href="https://tiktok.com" target="_blank" class="social-icon">
