--- a/src/app/shared/components/app-navbar/app-navbar.html
+++ b/src/app/shared/components/app-navbar/app-navbar.html
@@ -11,7 +11,7 @@
 
         <!-- Redes sociales -->
         <div class="social-section">
-          <a href="https://instagram.com" target="_blank" class="social-link">
+          <a href="https://www.instagram.com/bylittlehands.pe/" target="_blank" class="social-link">
             <i class="fab fa-instagram"></i>
           </a>
           <a href="https://tiktok.com" target="_blank" class="social-link">
@@ -117,7 +117,7 @@
 
       <div class="menu-social">
         <h3>Síguenos</h3>
-        <a href="https://instagram.com" target="_blank" class="menu-social-link">
+        <a href="https://www.instagram.com/bylittlehands.pe/" target="_blank" class="menu-social-link">
           <i class="fab fa-instagram"></i>
           <span>Instagram</span>
         </a>
