add: add product CRUD mat-table

--- a/src/app/features/about/about.html
+++ b/src/app/features/about/about.html
@@ -26,7 +26,7 @@
       para nutrir la mente y el corazón de los más pequeños.
     </p>
     <p class="supporting-text">
-      Porque educar es sembrar amor, respeto y propósito.
+      Porque educar es sembrar amor, respeto y propósito ✨
     </p>
 
   </div>
